src/objects/Lookup_Picklist_Settings_MERC__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>configuration for displaying lookups as picklists</description>
    <fields>
        <fullName>Child_Field_MERC__c</fullName>
        <description>The API name of the lookup field that should be rendered as a picklist.</description>
        <inlineHelpText>The API name of the lookup field that should be rendered as a picklist.</inlineHelpText>
        <label>Child Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controlling_Object_MERC__c</fullName>
        <description>The object on which the parent and child fields being populated are on.</description>
        <inlineHelpText>The object on which the parent and child fields being populated are on.</inlineHelpText>
        <label>Controlling Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Criteria_MERC__c</fullName>
        <description>A string that will be appended to the where clause for the related items.</description>
        <inlineHelpText>A string that will be appended to the where clause for the related items.</inlineHelpText>
        <label>Filter Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Field_MERC__c</fullName>
        <description>The API name of the field which acts as the controlling field. The dependent field will show values that are related to the parent field.</description>
        <inlineHelpText>The API name of the field which acts as the controlling field. The dependent field will show values that are related to the parent field.</inlineHelpText>
        <label>Parent Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object_API_Name_MERC__c</fullName>
        <description>The API name of the parent object which the items relate to. e.g. for Participant Agenda Items the filter is on Agenda Items that are related to the Meeting so the Parent object is Meeting_MERC__c.</description>
        <inlineHelpText>The API name of the parent object which the items relate to. e.g. for Participant Agenda Items the filter is on Agenda Items that are related to the Meeting so the Parent object is Meeting_MERC__c.</inlineHelpText>
        <label>Parent Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object_Id_Relationship_MERC__c</fullName>
        <description>If the Parent Field doesn&apos;t refer to the Parent object, supply the field path from the object the Parent Field refers to up to the the Parent Object. e.g. Participant Agenda looks up to Meeting Participant. MP looks up to Meeting through &apos;Meeting_MERC__c&apos;</description>
        <inlineHelpText>If the Parent Field doesn&apos;t refer to the Parent object, supply the field path from the object the Parent Field refers to up to the the Parent Object. e.g. Participant Agenda looks up to Meeting Participant. MP looks up to Meeting through &apos;Meeting_MERC__c&apos;</inlineHelpText>
        <label>Parent Object Id Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Label_Source_MERC__c</fullName>
        <description>If the Name field on the controlling object is an auto number you may wish to use a related object name. e.g. for Meeting Vendors you may wish to display Account_MERC__r.Name. in that case the value is Account_MERC__r</description>
        <inlineHelpText>If the Name field on the controlling object is an auto number you may wish to use a related object name. e.g. for Meeting Vendors you may wish to display Account_MERC__r.Name. in that case the value is Account_MERC__r</inlineHelpText>
        <label>Picklist Label Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Object_Relationship_MERC__c</fullName>
        <description>The name of the relationship from the child object to the parent object. e.g. The lookup relationship from Indication to Product is indicated by Indication__r</description>
        <inlineHelpText>The name of the relationship from the child object to the parent object. e.g. The lookup relationship from Indication to Product is indicated by Indication__r</inlineHelpText>
        <label>Picklist Object Relationship</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Lookup Picklist Settings</label>
</CustomObject>